--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -48,8 +48,7 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
-        python -m flake8 kittygram_backend/
-        cd ..
+        python -m flake8 backend/
         pytest
   build_and_push_to_docker_hub:
     runs-on: ubuntu-latest
@@ -129,7 +128,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./gateway/
+          context: ./nginx/
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
           tags: bpaverin/kittygram_gateway:latest
@@ -162,7 +161,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         # Параметр script передаёт в action appleboy/ssh-action команды,
-        # которые нужно выполнить на сервере, 
+        # которые нужно выполнить на сервере 
         # с которым установлено соединение
         script: |
           cd kittygram
