--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,8 @@ server {
 
   location /media/ {
     alias /media/;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/media/;
   }
 
   location / {
