--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
 
   location / {
     alias /static/;
-    alias /media/;
+    alias /app/media/;
     try_files $uri $uri/ /index.html;
   }
 }
