var/www to media

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,8 +14,7 @@ server {
   }
 
   location /media/ {
-    alias /app/media/;
-    try_files $uri $uri/ /index.html;
+    alias /var/www/kittygram/media/;
   }
 
   location / {
