--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
-      - media:/var/www/kittygran/media
+      - media:/app/media/
   frontend:
     env_file: .env
     build: ./frontend/
@@ -26,10 +26,8 @@ services:
   gateway:
     build: ./nginx/
     env_file: .env
-    depends_on:
-      - backend
     ports:
       - 9000:80
     volumes:
       - static:/static
-      - media:/var/www/kittygran/media
+      - media:/app/media/
